GPII-2767: Fixed typo (missing "a").

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -61,7 +61,7 @@ template content:
 {{message-helper "my-variable-key" subRecord}}
 ```
 
-The result would be `Displaying 2 dog(s)`.  In both these examples, the message key has been literal string (hence the
+The result would be `Displaying 2 dog(s)`.  In both these examples, the message key has been a literal string (hence the
 quotes).  You can also use any variable in the context.  So, the following handlebars template content results in the
 same output as the previous example:
 
