GPII-2767: Added docs for `defaultLanguage` option.

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -73,9 +73,10 @@ same output as the previous example:
 
 The component that provides the above helper provides the following configuration options:
 
-| Option             | Type       | Description |
-| ------------------ | ---------- | ----------- |
-| `messages`         | `{Object}` | A map of message keys and string templates. Generally assembled from one or more files (see below). |
+| Option            | Type       | Description |
+| ----------------- | ---------- | ----------- |
+| `defaultLanguage` | `{String}` | The default language to use if no translation is available for a user's preferred locale/language. |
+| `messages`        | `{Object}` | A map of message keys and string templates. Generally assembled from one or more files (see below). |
 
 
 ## Node Usage
