GPII-2767: Renamed overly general example variables.

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -213,18 +213,18 @@ language.  Let's say our combined set of message bundles looks like:
 ```json
 {
     "fr_FR": {
-        "localised-message": "bon jour"    
+        "daily-greeting": "bon jour"    
     },
     "fr": {
-        "localised-message": "bon soir"
+        "daily-greeting": "bon soir"
     },
     "en_US": {
-        "localised-message": "good day",
-        "localised-message-two": "thanks"
+        "daily-greeting": "good day",
+        "thanks-response": "thanks"
     },
     "en": {
-       "localised-message": "good night",
-       "localised-message-two": "cheers"
+       "daily-greeting": "good night",
+       "thanks-response": "cheers"
     }
 }
 ```
@@ -233,8 +233,8 @@ If `options.defaultLanguage` is set to `en_US` and we request `fr_FR`, the compi
 
 ```json
 {
-    "localised-message": "bon jour",
-    "localised-message-two": "thanks"
+    "daily-greeting": "bon jour",
+    "thanks-response": "thanks"
 }
 ```
 
@@ -243,8 +243,8 @@ Since both are locales, they both fail over from locale to language.  This can o
 
 ```json
 {
-    "localised-message": "bon soir",
-    "localised-message-two": "cheers"
+    "daily-greeting": "bon soir",
+    "thanks-response": "cheers"
 } 
 ```
 
