GPII-2767:  Implemented `{{messageHelper}}` to localise/internationalise messages from handlebars templates.

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -5,7 +5,7 @@ and uses them to provide a Handlebars helper that can replace a message key with
 page covers the basic usage, and the steps required to use this helper from Node or a browser.
 
 
-## The `{{message-helper}}` Helper
+## The `{{messageHelper}}` Helper
 
 The `gpii.handlebars.helper.messageHelper` grade is designed to be wired into the [renderer](renderer.md) provided by
 this package.  See below for examples of how this works in each environment.  Once this helper is available, you can
@@ -22,7 +22,7 @@ a message bundle like the following:
 The following handlebars template content would display the above key.
 
 ```handlebars
-{{message-helper "my-message-key"}}
+{{messageHelper "my-message-key" .}}
 ```
 
 ### Variable Substitution
@@ -47,7 +47,7 @@ Variable substitution is also supported.  Let's say you passed the following con
 The following handlebars template content would make use of the full context:
 
 ```handlebars
-{{message-helper "my-variable-key"}}
+{{messageHelper "my-variable-key" .}}
 ```
 
 The result would be `Displaying 2 cat(s)`.  Note that, like [`fluid.stringTemplate`](https://docs.fluidproject.org/infusion/development/CoreAPI.html#fluidstringtemplatetemplate-terms),
@@ -58,7 +58,7 @@ You can also optionally specify which part of the context to use for variable su
 template content:
 
 ```handlebars
-{{message-helper "my-variable-key" subRecord}}
+{{messageHelper "my-variable-key" subRecord}}
 ```
 
 The result would be `Displaying 2 dog(s)`.  In both these examples, the message key has been a literal string (hence the
@@ -66,7 +66,7 @@ quotes).  You can also use any variable in the context.  So, the following handl
 same output as the previous example:
 
 ```handlebars
-{{message-helper keys.variable subRecord}}
+{{messageHelper keys.variable subRecord}}
 ```
 
 ## `gpii.handlebars.helper.messageHelper` Component Options
@@ -75,13 +75,13 @@ The component that provides the above helper provides the following configuratio
 
 | Option            | Type       | Description |
 | ----------------- | ---------- | ----------- |
-| `defaultLanguage` | `{String}` | The default language to use if no translation is available for a user's preferred locale/language. |
+| `defaultLocale`   | `{String}` | The default locale to use if no translation is available for a user's preferred locale/language. |
 | `messages`        | `{Object}` | A map of message keys and string templates. Generally assembled from one or more files (see below). |
 
 
 ## Node Usage
 
-By default, the `{{message-helper}}` helper is wired into [`gpii.handlebars.standaloneRenderer`](standaloneRenderer.md),
+By default, the `{{messageHelper}}` helper is wired into [`gpii.handlebars.standaloneRenderer`](standaloneRenderer.md),
 which means it is available both through the Express view engine and in rendering content outside of Express (such as
 generating emails based on templates).
 
@@ -113,15 +113,15 @@ Belgium).  It is recommended to provide not only variations, but a default for t
 filename `myPackageMessages-nl.json` for Netherlands Dutch and `myPackageMessages-nl_BE.json` for Flemish.  In this
 manner, we can work with either a full locale (`nl_BE`) or simply a language prefix (`nl`).
 
-### `gpii.handlebars.inlineMessageBundlingMiddleware`
+### `gpii.handlebars.i18n.messageLoader`
 
-To simplify the browser side usage, a piece of `gpii.express` middleware is provided that starts with the standard 
-[language headers provided by the browser request](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Language),
-and follows the message bundling strategy outlined above.  The middleware supports the following configuration options:
+As there are multiple components that need access to the same "bundle of message bundles", a common component is
+provided that loads all bundles from the filesystem.  This component supports the following configuration options:
 
-| Option        | Type      | Description |
-| ------------- | --------- | ----------- |
-| `messageDirs` | `{Array}` | An array referencing one or more directories that contain message bundle files.  Paths may either be absolute or package-relative paths. |
+| Option          | Type       | Description |
+| --------------- | ---------- | ----------- |
+| `defaultLocale` | `{String}` | The locale to use if the user does not provide one in their request headers.  Defaults to `en_us`. |
+| `messageDirs`   | `{Array}`  | An array referencing one or more directories that contain message bundle files.  Paths may either be absolute or package-relative paths. |
 
 
 The `messageDirs` option supports an array of values.  Each directory will have its contents scanned and all bundles
@@ -163,7 +163,7 @@ message bundle would look something like:
 ```
 
 This is how the component keeps track of all available message bundles by language and/or locale.  Files that lack a
-language or locale suffix will be saved under a key that matches the value of `options.defaultLanguage` (see above).
+language or locale suffix will be saved under a key that matches the value of `options.defaultLocale` (see above).
 
 This is an intermediate format that allows the bundling middleware to respond to requests in any supported language.
 An individual request can include `Accepts-Language` headers indicating what languages are desired.  Let's say we have
@@ -184,7 +184,7 @@ the following combined set of message bundles:
 }
 ```
 Message resolution fails over from most to least specific, i.e. first messages are resolved against the locale, and then
-against the language, and then against the language that corresponds to `options.defaultLanguage`.  So, a request for
+against the language, and then against the language that corresponds to `options.defaultLocale`.  So, a request for
 a locale of `en_GB` would receive a compiled message bundle like:
 
 ```json
@@ -229,7 +229,7 @@ language.  Let's say our combined set of message bundles looks like:
 }
 ```
 
-If `options.defaultLanguage` is set to `en_US` and we request `fr_FR`, the compiled message bundle looks like:
+If `options.defaultLocale` is set to `en_US` and we request `fr_FR`, the compiled message bundle looks like:
 
 ```json
 {
@@ -239,7 +239,7 @@ If `options.defaultLanguage` is set to `en_US` and we request `fr_FR`, the compi
 ```
 
 Since both are locales, they both fail over from locale to language.  This can only happen if we have locale data. If
-`options.defaultLanguage` is set to `en` and we request `fr`, the compiled message bundle looks like:
+`options.defaultLocale` is set to `en` and we request `fr`, the compiled message bundle looks like:
 
 ```json
 {
@@ -248,10 +248,19 @@ Since both are locales, they both fail over from locale to language.  This can o
 } 
 ```
 
+### `gpii.handlebars.i18n.inlineMessageBundlingMiddleware`
+
+To simplify the browser side usage, a piece of `gpii.express` middleware is provided that starts with the standard 
+[language headers provided by the browser request](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Language),
+and follows the failover strategy outlined above.  You are expected to populate this component's `messageBundles` member
+with individual message bundles, keyed by language or locale.  In most cases you will want to use the 
+`gpii.handlebars.i18n.messageLoader` grade described above to populate this.
+
+
 ## Browser Usage
 
 The base [`gpii.handlebars.renderer.standalone`](renderer.md) grade is adequate if you wish to include all message
 bundles and handlebars templates as part of your grade definition.  See those docs for details.
 
-For more complex setups, the [`gpii.handlebars.renderer.serverAware`](renderer.md) grade is more suitable.  This
+For more complex setups, the [`gpii.handlebars.renderer.serverMessageAware`](renderer.md) grade is more suitable.  This
 communicates with two pieces of middleware to retrieve its templates and message bundles.
