GPII-2767: Updated to remove the need to explicitly pass the root context, and to restore support for passing a sub-context.

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -22,7 +22,7 @@ a message bundle like the following:
 The following handlebars template content would display the above key.
 
 ```handlebars
-{{messageHelper "my-message-key" .}}
+{{messageHelper "my-message-key"}}
 ```
 
 ### Variable Substitution
@@ -47,7 +47,7 @@ Variable substitution is also supported.  Let's say you passed the following con
 The following handlebars template content would make use of the full context:
 
 ```handlebars
-{{messageHelper "my-variable-key" .}}
+{{messageHelper "my-variable-key"}}
 ```
 
 The result would be `Displaying 2 cat(s)`.  Note that, like [`fluid.stringTemplate`](https://docs.fluidproject.org/infusion/development/CoreAPI.html#fluidstringtemplatetemplate-terms),
