GPII-3085: Consolidated renderer guts into a single common grade and fixed client-side renderer. GPII-2444: Modelised message bundles. NOJIRA: Modelised templates.

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -79,7 +79,7 @@ The component that provides the above helper provides the following configuratio
 
 ## Node Usage
 
-By default, the `{{messageHelper}}` helper is wired into [`gpii.handlebars.standaloneRenderer`](standaloneRenderer.md),
+By default, the `{{messageHelper}}` helper is wired into [`gpii.handlebars.standaloneRenderer`](renderer.md),
 which means it is available both through the Express view engine and in rendering content outside of Express (such as
 generating emails based on templates).
 
