GPII-4100: Refactored to use recent potentia-ii, which required rewriting the `getMessage` helper and i18n stack.

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -112,7 +112,7 @@ Belgium).  It is recommended to provide not only variations, but a default for t
 filename `myPackageMessages-nl.json` for Netherlands Dutch and `myPackageMessages-nl_BE.json` for Flemish.  In this
 manner, we can work with either a full locale (`nl_BE`) or simply a language prefix (`nl`).
 
-### `gpii.handlebars.i18n.messageLoader`
+### `gpii.handlebars.i18n.messageBundleLoader`
 
 As there are multiple components that need access to the same "bundle of message bundles", a common component is
 provided that loads all bundles from the filesystem.  This component supports the following configuration options:
@@ -253,7 +253,7 @@ To simplify the browser side usage, a piece of `gpii.express` middleware is prov
 [language headers provided by the browser request](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Language),
 and follows the failover strategy outlined above.  You are expected to populate this component's `messageBundles` member
 with individual message bundles, keyed by language or locale.  In most cases you will want to use the
-`gpii.handlebars.i18n.messageLoader` grade described above to populate this.
+`gpii.handlebars.i18n.messageBundleLoader` grade described above to populate this.
 
 ## Browser Usage
 
