FLUID-6524: Migrate to fluid-project organisation and update dependencies.

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -6,7 +6,7 @@ page covers the basic usage, and the steps required to use this helper from Node
 
 ## The `{{messageHelper}}` Helper
 
-The `gpii.handlebars.helper.messageHelper` grade is designed to be wired into the [renderer](renderer.md) provided by
+The `fluid.handlebars.helper.messageHelper` grade is designed to be wired into the [renderer](renderer.md) provided by
 this package.  See below for examples of how this works in each environment.  Once this helper is available, you can
 refer to it in your templates, and use it to display localised/internationalised messages.  So, let's say that you have
 a message bundle like the following:
@@ -68,7 +68,7 @@ same output as the previous example:
 {{messageHelper keys.variable subRecord}}
 ```
 
-## `gpii.handlebars.helper.messageHelper` Component Options
+## `fluid.handlebars.helper.messageHelper` Component Options
 
 The component that provides the above helper provides the following configuration options:
 
@@ -79,7 +79,7 @@ The component that provides the above helper provides the following configuratio
 
 ## Node Usage
 
-By default, the `{{messageHelper}}` helper is wired into [`gpii.handlebars.standaloneRenderer`](renderer.md),
+By default, the `{{messageHelper}}` helper is wired into [`fluid.handlebars.standaloneRenderer`](renderer.md),
 which means it is available both through the Express view engine and in rendering content outside of Express (such as
 generating emails based on templates).
 
@@ -112,7 +112,7 @@ Belgium).  It is recommended to provide not only variations, but a default for t
 filename `myPackageMessages-nl.json` for Netherlands Dutch and `myPackageMessages-nl_BE.json` for Flemish.  In this
 manner, we can work with either a full locale (`nl_BE`) or simply a language prefix (`nl`).
 
-### `gpii.handlebars.i18n.messageBundleLoader`
+### `fluid.handlebars.i18n.messageBundleLoader`
 
 As there are multiple components that need access to the same "bundle of message bundles", a common component is
 provided that loads all bundles from the filesystem.  This component supports the following configuration options:
@@ -247,18 +247,18 @@ Since both are locales, they both fail over from locale to language.  This can o
 }
 ```
 
-### `gpii.handlebars.i18n.inlineMessageBundlingMiddleware`
+### `fluid.handlebars.i18n.inlineMessageBundlingMiddleware`
 
-To simplify the browser side usage, a piece of `gpii.express` middleware is provided that starts with the standard
+To simplify the browser side usage, a piece of `fluid.express` middleware is provided that starts with the standard
 [language headers provided by the browser request](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Language),
 and follows the failover strategy outlined above.  You are expected to populate this component's `messageBundles` member
 with individual message bundles, keyed by language or locale.  In most cases you will want to use the
-`gpii.handlebars.i18n.messageBundleLoader` grade described above to populate this.
+`fluid.handlebars.i18n.messageBundleLoader` grade described above to populate this.
 
 ## Browser Usage
 
-The base [`gpii.handlebars.renderer.standalone`](renderer.md) grade is adequate if you wish to include all message
+The base [`fluid.handlebars.renderer.standalone`](renderer.md) grade is adequate if you wish to include all message
 bundles and handlebars templates as part of your grade definition.  See those docs for details.
 
-For more complex setups, the [`gpii.handlebars.renderer.serverMessageAware`](renderer.md) grade is more suitable.  This
+For more complex setups, the [`fluid.handlebars.renderer.serverMessageAware`](renderer.md) grade is more suitable.  This
 communicates with two pieces of middleware to retrieve its templates and message bundles.
